Fixed minor bug with Search.DefaultSearchChangeOrigin histogram

Looking at TemplateURLService code I discovered that
ApplyDefaultSearchChangeNoMetrics function has minor bug in comparison
of search engines.

BUG=711608
R=pkasting@chromium.org,vasilii@chromium.org

Review-Url: https://codereview.chromium.org/2810233005
Cr-Commit-Position: refs/heads/master@{#464706}

Former-commit-id: ef5c7c7902dc7cabb27c1c0149bf725821ce6dce